--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
     container_name: pwa-nginx
     build: nginx/
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt:ro
-      - ./data/certbot/www:/var/www/certbot:ro
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     environment:
-      - SERVER_NAME="pwaproject.fr"
-      - CERT_FULLCHAIN="/etc/letsencrypt/live/pwaproject.fr/fullchain.pem"
-      - CERT_PRIVKEY="/etc/letsencrypt/live/pwaproject.fr/privkey.pem"
+      - SERVER_NAME="pwaproject.tk"
+      - CERT_FULLCHAIN="/etc/letsencrypt/live/pwaproject.tk/fullchain.pem"
+      - CERT_PRIVKEY="/etc/letsencrypt/live/pwaproject.tk/privkey.pem"
     # Command is used to substitute env variables from the nginx conf
     command: sh -c "envsubst \"`env | awk -F = '{printf \" $$%s\", $$1}'`\" < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     ports:
@@ -59,7 +59,7 @@ services:
     image: certbot/certbot
     container_name: pwa-certbot
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt:ro
+      - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     entrypoint: sh -c "while :; do certbot renew; sleep 12h; done"
     networks:
